--- a/docs/development/index.mdx
+++ b/docs/development/index.mdx
@@ -18,7 +18,7 @@ DeployStack follows a modern full-stack architecture:
 - **Frontend**: Vue 3 + TypeScript + Vite for the user interface
 - **Backend**: Fastify + TypeScript + SQLite/PostgreSQL for the API and data layer
 - **MCP Focus**: Specialized CI/CD pipeline for MCP server deployments
-- **Multi-Cloud**: Support for AWS, Render.com, Fly.io, DigitalOcean, and more
+- **Multi-Environment**: Support for Google Cloud, and local development environments
 
 ## Development Areas
 
