--- a/docs/teams.mdx
+++ b/docs/teams.mdx
@@ -52,9 +52,8 @@ Teams serve as comprehensive containers for all your deployment resources:
 - **Deployment History**: Complete logs and monitoring data for team deployments
 
 ### Cloud Provider Credentials
-- **Render.com**: API tokens and service configurations
-- **Fly.io**: Authentication tokens and app settings
-- **Other Providers**: Credentials for additional supported platforms
+- **local MCP Servers**: Credentials for local MCP environments
+- **Google Cloud**: API tokens and service configurations
 
 ### Global Environment Variables
 - **Node.js Environment Variables**: Custom env vars for Node.js-based MCP servers
